--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 />
                             </svg>
                         </div>
-                        <span>+380957513629</span>
+                        <span>+380 95 751 36 29</span>
                     </a>
                     <a href="mailto:vavan123music@gmail.com" rel="author" class="contact-info__item">
                         <div class="contact-info__item-icon-wrapper">
@@ -179,9 +179,9 @@
                   </svg>
                 </div>
                 <p class="intro_text">
-                  Meow. I am a Binary Studio cat. Still got 7 lives. Work in IT,
-                  Full Stack Evil, all I do is sleep and try to help out hoomans
-                  with their projects whenever they need me.
+                    I am a full-stack developer looking for a full-time or part-time job where 
+                    i can apply my knowledge to create the client and server side of the site.
+                    Also, I need a job to improve my skills in developing fast and user-friendly websites
                 </p>
               </div>
             </div>
