--- a/index.html
+++ b/index.html
@@ -189,9 +189,12 @@
           <div class="container">
             <div class="resume__block">
               <div class="skills">
-                <h3 class="skills__header">Skills</h3>
+                <h3 class="skills__header">Technical skills</h3>
                 <p class="skills__text">
-                  Sleep, eat, more sleep, meow, mrrr, purr.
+                  <strong>Languages:</strong> JavaScript, TypeScript, Java, Python, Golang, HTML, CSS, SQL.
+                </p>
+                <p class="skills__text">
+                  <strong>Frameworks:</strong> Express, React, Spring Boot.
                 </p>
               </div>
             </div>
