updated experiences, education and language blocks

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="skills">
                 <h3 class="skills__header">Technical skills</h3>
                 <p class="skills__text">
-                  <strong>Languages:</strong> JavaScript, TypeScript, Java, Python, Golang, HTML, CSS, SQL.
+                  <strong>Languages:</strong> JavaScript, TypeScript, Java, HTML, CSS, SQL.
                 </p>
                 <p class="skills__text">
                   <strong>Frameworks:</strong> Express, React, Spring Boot.
@@ -205,23 +205,21 @@
                 <div class="experiences">
                     <h3 class="experiences__header">Experience</h3>
                     <div class="experiences__company">
-                        <div class="experiences__company-header">
-                            <span class="experiences__company-header-durability"
-                            >For whole my life</span>
-                            <h3 class="experiences__company-header-name">BinaryStudio</h3>
-                        </div>
-    
-                        <div class="experiences__company-project">
-                            <span class="experiences__company-project-role"
-                            >Binary Studio Cat</span>
-                            <h3 class="experiences__company-project-name">Hooman project</h3>
-                            <ul class="experiences__company-project-responsibilities">
-                                <li>Supported hoomans</li>
-                                <li>Slept all the time</li>
-                                <li>Lied on the keyboard</li>
-                                <li>Watched my hoomans working</li>
-                            </ul>
-                        </div>
+                      <ul>
+                        <li><strong>Sep. 2021:</strong> admissions to Lviv Polytechnic 😊</li>
+                        <li><strong>Oct. 2021:</strong> start learning the C programming language 🙂</li>
+                        <li><strong>Dec. 2021:</strong> first session at the university 🥲</li>
+                        <li><strong>Feb. 2022:</strong> start learning Python 😊</li>
+                        <li><strong>Jul. 2022:</strong> start learning Java 😊</li>
+                        <li><strong>Sep. 2022:</strong> Starting to write a desktop application for insurance 😊</li>
+                        <li><strong>Nov. 2022:</strong> first desktop project uploaded to GitHub 😊</li>
+                        <li><strong>Mar. 2023:</strong> start learning JavaScript 😊</li>
+                        <li><strong>Apr. 2023:</strong> starting to write a web system for a pharmacy 😊</li>
+                        <li><strong>Jun. 2023:</strong> first web project uploaded to GitHub 😊</li>
+                        <li><strong>Jul. 2023:</strong> writing the server side for a web wallet 😊</li>
+                        <li><strong>Sep. 2023:</strong> start learning basic data mining tasks 😊</li>
+                        <li><strong>Nov. 2023:</strong> creating a web app for finding a linear regression 😊</li>
+                      </ul>
                     </div>
                 </div>
                 <div class="additional-info fv">
@@ -230,25 +228,24 @@
                           <h3 class="additional-info__education-header">Education</h3>
                           <div class="additional-info__education-university">
                             <span class="additional-info__education-university-durability"
-                              >2021</span
+                              >2021 - Present</span
                             >
                             <h3 class="additional-info__education-university-speciality">
-                              Cat track
+                              Bachelor of computer science
                             </h3>
                             <p class="additional-info__education-university-name">
-                              Binary Studio Academy
+                              Lviv Polytechnic National University, Lviv
                             </p>
                           </div>
                         </div>
                       
                         <div class="additional-info__languages">
                           <h3 class="additional-info__languages-header">Languages</h3>
-                          <p class="additional-info__languages-item">Meow dialect</p>
                           <p class="additional-info__languages-item">
-                            Ukrainian (understand)
+                            Ukrainian (native)
                           </p>
                           <p class="additional-info__languages-item">
-                            English (don't understand)
+                            English (B1)
                           </p>
                         </div>
                       </div>
