added blocks about my preferences

--- a/index.html
+++ b/index.html
@@ -253,6 +253,59 @@
               </div>
             </div>
           </div>
+          <div class="container">
+            <div class="resume__block">
+              <div class="strengths-and-weaknesses-info">
+                <div class="strengths-info">
+                  <h3>Strengths</h3>
+                  <ul>
+                    <li>Ability to self-learn</li>
+                    <li>Experience in solving Data Mining problems</li>
+                    <li>Experience with the MySQL database</li>
+                    <li>Creativity</li>
+                    <li>Experience with VirtualBox</li>
+                    <li>Experience with Cisco Packet Tracer</li>
+                    <li>Middle Excel developer 🤭</li>
+                    <li>Senior Pages/Word developer 😎</li>
+                    <li>Middle ChatGPT developer 🤭</li>
+                  </ul>
+                </div>
+                <div class="weaknesses-info">
+                  <h3>Weaknesses</h3>
+                  <ul>
+                    <li>A little bit of laziness</li>
+                    <li>To fully understand the task, I have to read it several times</li>
+                    <li>Insufficient experience in proper project organization</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="resume__block">
+              <div class="like-and-dislike-info">
+                <div class="strengths-info">
+                  <h3>I like:</h3>
+                  <ul>
+                    <li>Learn new technologies and apply them in practice</li>
+                    <li>Create projects that can bring benefits</li>
+                    <li>Design systems</li>
+                    <li>Take courses for self-development</li>
+                    <li>Create web applications</li>
+                    <li>Use third-party APIs to enrich the site's functionality</li>
+                    <li>Understand the work of algorithms used in real life</li>
+                  </ul>
+                </div>
+                <div class="weaknesses-info">
+                  <h3>I dislike:</h3>
+                  <ul>
+                    <li>Microsoft SQL Server 😢</li>
+                    <li>Older software is oriented only for Microsoft OS 😢</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
   </body>
