added styles for timeline list

--- a/index.html
+++ b/index.html
@@ -204,23 +204,21 @@
               <div class="main-info fh">
                 <div class="experiences">
                     <h3 class="experiences__header">Experience</h3>
-                    <div class="experiences__company">
-                      <ul>
-                        <li><strong>Sep. 2021:</strong> admissions to Lviv Polytechnic 😊</li>
-                        <li><strong>Oct. 2021:</strong> start learning the C programming language 🙂</li>
-                        <li><strong>Dec. 2021:</strong> first session at the university 🥲</li>
-                        <li><strong>Feb. 2022:</strong> start learning Python 😊</li>
-                        <li><strong>Jul. 2022:</strong> start learning Java 😊</li>
-                        <li><strong>Sep. 2022:</strong> Starting to write a desktop application for insurance 😊</li>
-                        <li><strong>Nov. 2022:</strong> first desktop project uploaded to GitHub 😊</li>
-                        <li><strong>Mar. 2023:</strong> start learning JavaScript 😊</li>
-                        <li><strong>Apr. 2023:</strong> starting to write a web system for a pharmacy 😊</li>
-                        <li><strong>Jun. 2023:</strong> first web project uploaded to GitHub 😊</li>
-                        <li><strong>Jul. 2023:</strong> writing the server side for a web wallet 😊</li>
-                        <li><strong>Sep. 2023:</strong> start learning basic data mining tasks 😊</li>
-                        <li><strong>Nov. 2023:</strong> creating a web app for finding a linear regression 😊</li>
-                      </ul>
-                    </div>
+                    <ul class="experiences__timeline">
+                      <li><strong>Sep. 2021:</strong> <p>admissions to Lviv Polytechnic 😊</p></li>
+                      <li><strong>Oct. 2021:</strong> <p>start learning the C programming language 🙂</p></li>
+                      <li><strong>Dec. 2021:</strong> <p>first session at the university 🥲</p></li>
+                      <li><strong>Feb. 2022:</strong> <p>start learning Python 😊</p></li>
+                      <li><strong>Jul. 2022:</strong> <p>start learning Java 😊</p></li>
+                      <li><strong>Sep. 2022:</strong> <p>writing a desktop application for insurance 😊</p></li>
+                      <li><strong>Nov. 2022:</strong> <p>first desktop project uploaded to GitHub 😊</p></li>
+                      <li><strong>Mar. 2023:</strong> <p>start learning JavaScript 😊</p></li>
+                      <li><strong>Apr. 2023:</strong> <p>starting to write a web system for a pharmacy 😊</p></li>
+                      <li><strong>Jun. 2023:</strong> <p>first web project uploaded to GitHub 😊</p></li>
+                      <li><strong>Jul. 2023:</strong> <p>writing the server side for a web wallet 😊</p></li>
+                      <li><strong>Sep. 2023:</strong> <p>start learning basic data mining tasks 😊</p></li>
+                      <li><strong>Nov. 2023:</strong> <p>creating a web app for finding a linear regression 😊</p></li>
+                    </ul>
                 </div>
                 <div class="additional-info fv">
                     <div class="additional-info fv">
