added styles for preferences blocks

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           <div class="container">
             <div class="resume__block">
               <div class="like-and-dislike-info">
-                <div class="strengths-info">
+                <div class="like-info">
                   <h3>I like:</h3>
                   <ul>
                     <li>Learn new technologies and apply them in practice</li>
@@ -294,7 +294,7 @@
                     <li>Understand the work of algorithms used in real life</li>
                   </ul>
                 </div>
-                <div class="weaknesses-info">
+                <div class="dislike-info">
                   <h3>I dislike:</h3>
                   <ul>
                     <li>Microsoft SQL Server 😢</li>
