--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="resume">
           <div class="container">
             <div class="resume__block">
-              <h1 class="contact-info__header">Volodymyr Potapenko</h1>
+              <h1 class="contact-info__header typewriter">Volodymyr Potapenko</h1>
               <h3 class="contact-info__sub-header">Full-stack developer</h3>
       
               <div class="contact_info_container fh">
